--- a/package/tuktuk.css
+++ b/package/tuktuk.css
@@ -33,10 +33,31 @@
 .flexbox.x.right{-webkit-box-pack:end;-moz-box-pack:end;-ms-box-pack:end;-o-box-pack:end;box-pack:end}
 .flexbox.x.center{-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center}
 .flexbox.reverse{-webkit-box-direction:reverse;-moz-box-direction:reverse;-ms-box-direction:reverse;-o-box-direction:reverse;box-direction:reverse}
+.flexbox.single{-webkit-box-lines:single;-moz-box-lines:single;-ms-box-lines:single;-o-box-lines:single;box-lines:single}
+.flexbox.multiple{-webkit-box-lines:multiple;-moz-box-lines:multiple;-ms-box-lines:multiple;-o-box-lines:multiple;box-lines:multiple}
 .flexbox > *{display:block}
 .flexbox > .box{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0}
 .flexbox > .box-1{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
 .flexbox > .box-2{-webkit-box-flex:2;-moz-box-flex:2;-ms-box-flex:2;-o-box-flex:2;box-flex:2}
+.flexbox > .flex_0{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0}
+.flexbox > .flex_1{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
+.flexbox > .flex_2{-webkit-box-flex:2;-moz-box-flex:2;-ms-box-flex:2;-o-box-flex:2;box-flex:2}
+.flexbox > .flex_3{-webkit-box-flex:3;-moz-box-flex:3;-ms-box-flex:3;-o-box-flex:3;box-flex:3}
+.flexbox > .flex_4{-webkit-box-flex:4;-moz-box-flex:4;-ms-box-flex:4;-o-box-flex:4;box-flex:4}
+.flexbox > .flex_5{-webkit-box-flex:5;-moz-box-flex:5;-ms-box-flex:5;-o-box-flex:5;box-flex:5}
+.flexbox > .flex_6{-webkit-box-flex:6;-moz-box-flex:6;-ms-box-flex:6;-o-box-flex:6;box-flex:6}
+.flexbox > .flex_7{-webkit-box-flex:7;-moz-box-flex:7;-ms-box-flex:7;-o-box-flex:7;box-flex:7}
+.flexbox > .flex_8{-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
+.flexbox > .flex_9{-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
+.flexbox > .order_1{-webkit-box-ordinal-group:1;-moz-box-ordinal-group:1;-ms-box-ordinal-group:1;-o-box-ordinal-group:1;box-ordinal-group:1}
+.flexbox > .order_2{-webkit-box-ordinal-group:2;-moz-box-ordinal-group:2;-ms-box-ordinal-group:2;-o-box-ordinal-group:2;box-ordinal-group:2}
+.flexbox > .order_3{-webkit-box-ordinal-group:3;-moz-box-ordinal-group:3;-ms-box-ordinal-group:3;-o-box-ordinal-group:3;box-ordinal-group:3}
+.flexbox > .order_4{-webkit-box-ordinal-group:4;-moz-box-ordinal-group:4;-ms-box-ordinal-group:4;-o-box-ordinal-group:4;box-ordinal-group:4}
+.flexbox > .order_5{-webkit-box-ordinal-group:5;-moz-box-ordinal-group:5;-ms-box-ordinal-group:5;-o-box-ordinal-group:5;box-ordinal-group:5}
+.flexbox > .order_6{-webkit-box-ordinal-group:6;-moz-box-ordinal-group:6;-ms-box-ordinal-group:6;-o-box-ordinal-group:6;box-ordinal-group:6}
+.flexbox > .order_7{-webkit-box-ordinal-group:7;-moz-box-ordinal-group:7;-ms-box-ordinal-group:7;-o-box-ordinal-group:7;box-ordinal-group:7}
+.flexbox > .order_8{-webkit-box-ordinal-group:8;-moz-box-ordinal-group:8;-ms-box-ordinal-group:8;-o-box-ordinal-group:8;box-ordinal-group:8}
+.flexbox > .order_9{-webkit-box-ordinal-group:9;-moz-box-ordinal-group:9;-ms-box-ordinal-group:9;-o-box-ordinal-group:9;box-ordinal-group:9}
 
 h1,h2,h3,h4,h5,h6{margin:0;padding:0;line-height:1.2em;}
 h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{font-weight:inherit}
