--- a/widgets/boxes/tuktuk.boxes.styl
+++ b/widgets/boxes/tuktuk.boxes.styl
@@ -3,7 +3,7 @@
 
 /* ====================== CONSTANTS ====================== */
 header_height = 44px
-aside_width   = 240px
+aside_width   = 232px
 dimension     = (dimension - 6)
 
 body, html
@@ -20,10 +20,9 @@ body, html
   /* ====================== SCAFFOLD ====================== */
   & > aside, & > section
     display-box()
-    box-flex(1)
     box-orient(vertical)
 
-    & > header, > footer
+    & header, footer
       box-flex(0)
       display: block
       height: header_height
@@ -33,7 +32,7 @@ body, html
         height: h = (header_height - dimension)
         line-height: h
 
-    & > article
+    & article
       box-flex(1)
 
   & > aside
@@ -44,11 +43,17 @@ body, html
     &.absolute
       position: absolute
       height: inherit
-      transition all 250ms
-      transform translateX(-(aside_width))
+      transition all 300ms
+      transform translateX(-(aside_width * 1.25))
 
       &.active
         transform translateX(0px)
+
+    & > div
+      width: 100%
+      height: 100%
+      display-box()
+      box-orient(vertical)
 
   & > section
     box-flex(1)
@@ -127,7 +132,7 @@ body, html
     margin-bottom: dimension
 
   & > aside, & > section
-    & > header
+    & header
       & .session
         & > *
           float: left
@@ -141,7 +146,7 @@ body, html
           float: right
 
   & > aside
-    & > article .avatar
+    & article .avatar
       height: aside_width - (dimension * 2)
       width: aside_width - (dimension * 2)
 
