--- a/package/widgets/boxes/tuktuk.boxes.css
+++ b/package/widgets/boxes/tuktuk.boxes.css
@@ -1,12 +1,13 @@
 body,html{height:100%;width:100%;margin:0;padding:0}
 [data-tuktuk=boxes]{display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;overflow:hidden;}
-[data-tuktuk=boxes] > aside,[data-tuktuk=boxes] > section{display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;}
-[data-tuktuk=boxes] > aside > header,[data-tuktuk=boxes] > section > header,[data-tuktuk=boxes] > aside > footer,[data-tuktuk=boxes] > section > footer{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:block;height:44px;line-height:44px;padding:7px;}
-[data-tuktuk=boxes] > aside > header > *,[data-tuktuk=boxes] > section > header > *,[data-tuktuk=boxes] > aside > footer > *,[data-tuktuk=boxes] > section > footer > *{height:30px;line-height:30px}
-[data-tuktuk=boxes] > aside > article,[data-tuktuk=boxes] > section > article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
-[data-tuktuk=boxes] > aside{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;width:240px;z-index:1;}
-[data-tuktuk=boxes] > aside.absolute{position:absolute;height:inherit;-webkit-transition:all 250ms;-moz-transition:all 250ms;-ms-transition:all 250ms;-o-transition:all 250ms;transition:all 250ms;-webkit-transform:translateX(-240px);-moz-transform:translateX(-240px);-ms-transform:translateX(-240px);-o-transform:translateX(-240px);transform:translateX(-240px);}
+[data-tuktuk=boxes] > aside,[data-tuktuk=boxes] > section{display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;}
+[data-tuktuk=boxes] > aside header,[data-tuktuk=boxes] > section header,[data-tuktuk=boxes] > aside footer,[data-tuktuk=boxes] > section footer{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:block;height:44px;line-height:44px;padding:7px;}
+[data-tuktuk=boxes] > aside header > *,[data-tuktuk=boxes] > section header > *,[data-tuktuk=boxes] > aside footer > *,[data-tuktuk=boxes] > section footer > *{height:30px;line-height:30px}
+[data-tuktuk=boxes] > aside article,[data-tuktuk=boxes] > section article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
+[data-tuktuk=boxes] > aside{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;width:232px;z-index:1;}
+[data-tuktuk=boxes] > aside.absolute{position:absolute;height:inherit;-webkit-transition:all 300ms;-moz-transition:all 300ms;-ms-transition:all 300ms;-o-transition:all 300ms;transition:all 300ms;-webkit-transform:translateX(-290px);-moz-transform:translateX(-290px);-ms-transform:translateX(-290px);-o-transform:translateX(-290px);transform:translateX(-290px);}
 [data-tuktuk=boxes] > aside.absolute.active{-webkit-transform:translateX(0);-moz-transform:translateX(0);-ms-transform:translateX(0);-o-transform:translateX(0);transform:translateX(0)}
+[data-tuktuk=boxes] > aside > div{width:100%;height:100%;display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical}
 [data-tuktuk=boxes] > section{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;z-index:0}
 [data-tuktuk=boxes] ul{list-style:none;}
 [data-tuktuk=boxes] ul.totals{display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;text-align:center;}
@@ -27,8 +28,8 @@ body,html{height:100%;width:100%;margin:0;padding:0}
 [data-tuktuk=boxes] .margin_right{margin-right:14px}
 [data-tuktuk=boxes] .margin_top{margin-top:14px}
 [data-tuktuk=boxes] .margin_bottom{margin-bottom:14px}
-[data-tuktuk=boxes] > aside > header .session > *,[data-tuktuk=boxes] > section > header .session > *{float:left}
-[data-tuktuk=boxes] > aside > header .session > .avatar,[data-tuktuk=boxes] > section > header .session > .avatar{height:30px;margin-right:7px}
-[data-tuktuk=boxes] > aside > header .session > button,[data-tuktuk=boxes] > section > header .session > button,[data-tuktuk=boxes] > aside > header .session > .button,[data-tuktuk=boxes] > section > header .session > .button{margin-top:2.8px;float:right}
-[data-tuktuk=boxes] > aside > article .avatar{height:212px;width:212px}
+[data-tuktuk=boxes] > aside header .session > *,[data-tuktuk=boxes] > section header .session > *{float:left}
+[data-tuktuk=boxes] > aside header .session > .avatar,[data-tuktuk=boxes] > section header .session > .avatar{height:30px;margin-right:7px}
+[data-tuktuk=boxes] > aside header .session > button,[data-tuktuk=boxes] > section header .session > button,[data-tuktuk=boxes] > aside header .session > .button,[data-tuktuk=boxes] > section header .session > .button{margin-top:2.8px;float:right}
+[data-tuktuk=boxes] > aside article .avatar{height:204px;width:204px}
 [data-tuktuk=boxes] > aside hr{border:0;height:1px;margin:0}
