--- a/package/widgets/modal/tuktuk.modal.css
+++ b/package/widgets/modal/tuktuk.modal.css
@@ -1,7 +1,7 @@
 [data-tuktuk="modal"]{position:fixed;top:0;left:50%;background:#eee;-webkit-border-radius:0 0 1px 1px;-moz-border-radius:0 0 1px 1px;-ms-border-radius:0 0 1px 1px;-o-border-radius:0 0 1px 1px;border-radius:0 0 1px 1px;-webkit-box-shadow:0 1px 4px #000;-moz-box-shadow:0 1px 4px #000;-ms-box-shadow:0 1px 4px #000;-o-box-shadow:0 1px 4px #000;box-shadow:0 1px 4px #000;-webkit-transition:all 300ms 100ms;-moz-transition:all 300ms 100ms;-ms-transition:all 300ms 100ms;-o-transition:all 300ms 100ms;transition:all 300ms 100ms;-webkit-transform:translateY(-100%);-moz-transform:translateY(-100%);-ms-transform:translateY(-100%);-o-transform:translateY(-100%);transform:translateY(-100%);opacity:0;visibility:hidden;z-index:1981;}
-[data-tuktuk="modal"] > *{padding:12px}
-[data-tuktuk="modal"] > header,[data-tuktuk="modal"] > footer{background:#e5e5e5}
-[data-tuktuk="modal"] > article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
+[data-tuktuk="modal"] header,[data-tuktuk="modal"] footer,[data-tuktuk="modal"] article{padding:12px}
+[data-tuktuk="modal"] header,[data-tuktuk="modal"] footer{background:#e5e5e5}
+[data-tuktuk="modal"] article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
 [data-tuktuk="modal"].active{-webkit-transform:translateY(0%);-moz-transform:translateY(0%);-ms-transform:translateY(0%);-o-transform:translateY(0%);transform:translateY(0%);opacity:1;visibility:visible}
 [data-tuktuk="modal"]:not(.side){margin-left:-144px;margin-top:0 !important;}
 [data-tuktuk="modal"]:not(.side).column_5{margin-left:-184px}
@@ -23,6 +23,7 @@
 [data-tuktuk="modal"].column_12{width:928px}
 [data-tuktuk="modal"].side{position:absolute;display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;top:0;right:0;bottom:0;left:auto;margin:0;-webkit-box-shadow:-1px 0 4px #000;-moz-box-shadow:-1px 0 4px #000;-ms-box-shadow:-1px 0 4px #000;-o-box-shadow:-1px 0 4px #000;box-shadow:-1px 0 4px #000;-webkit-transform:translateX(100%);-moz-transform:translateX(100%);-ms-transform:translateX(100%);-o-transform:translateX(100%);transform:translateX(100%);}
 [data-tuktuk="modal"].side.active{-webkit-transform:translateX(0%);-moz-transform:translateX(0%);-ms-transform:translateX(0%);-o-transform:translateX(0%);transform:translateX(0%)}
+[data-tuktuk="modal"].side > div{width:100%;height:100%;display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical}
 @media only screen and (max-width: 528px){[data-tuktuk="modal"]{left:5% !important;width:90% !important;margin-left:0 !important}
 }[data-tuktuk="lock"]{width:100%;height:100%;position:fixed;top:0;bottom:0;left:0;background:rgba(0,0,0,0.75);z-index:1980;visibility:hidden;opacity:0;-webkit-transition:all 300ms 100ms;-moz-transition:all 300ms 100ms;-ms-transition:all 300ms 100ms;-o-transition:all 300ms 100ms;transition:all 300ms 100ms;}
 [data-tuktuk="lock"].active{visibility:visible;opacity:1}
