--- a/stylesheets/tuktuk.button.styl
+++ b/stylesheets/tuktuk.button.styl
@@ -54,11 +54,12 @@
 
   &.tiny
     height: h = 22px
-    font-size: 11px
+    font-size: size = (h / 2)
     line-height: (h - 2)
     &.icon
       padding: 1px 6px 0 6px
     &:not(.icon)
       padding: 0 10px
       & > .icon
-        height: 12px
+        height: size
+        line-height: size
