--- a/stylesheets/__theme.styl
+++ b/stylesheets/__theme.styl
@@ -1,9 +1,10 @@
-color           = #16A6B6
+
+text            = #111
+color           = #f00
+
 color_secondary = #BFBFBF
-color_cancel    = #EE6557
-color_accept    = #3FB58E
 
 bck_lightest    = #fff
 bck_light       = #f7f7f7
-bck_dark        = #282828
+bck_dark        = #383838
 bck_darkest     = #181818
