.tag & :not(.icon)

--- a/stylesheets/tuktuk.widget.styl
+++ b/stylesheets/tuktuk.widget.styl
@@ -65,7 +65,7 @@ img
       border-radius 50%
 
 /* ================== TAGs ================== */
-.tag
+:not(.icon).tag
   position: relative
   padding: 3px 4px
   font-size: 9px !important
