Loading method in modal widget

--- a/stylesheets/__vendor.styl
+++ b/stylesheets/__vendor.styl
@@ -86,3 +86,7 @@ transition-delay()
 
 transform()
   vendor('transform', arguments)
+
+
+transform-origin()
+  vendor('transform-origin', arguments)
