--- a/package/widgets/boxes/tuktuk.boxes.css
+++ b/package/widgets/boxes/tuktuk.boxes.css
@@ -3,6 +3,7 @@ body,html{height:100%;width:100%;margin:0;padding:0}
 [data-tuktuk=boxes] > aside,[data-tuktuk=boxes] > section{display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;}
 [data-tuktuk=boxes] > aside header,[data-tuktuk=boxes] > section header,[data-tuktuk=boxes] > aside footer,[data-tuktuk=boxes] > section footer{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:block;height:44px;line-height:44px;padding:7px;}
 [data-tuktuk=boxes] > aside header > *,[data-tuktuk=boxes] > section header > *,[data-tuktuk=boxes] > aside footer > *,[data-tuktuk=boxes] > section footer > *{height:30px;line-height:30px}
+[data-tuktuk=boxes] > aside header .button,[data-tuktuk=boxes] > section header .button,[data-tuktuk=boxes] > aside footer .button,[data-tuktuk=boxes] > section footer .button,[data-tuktuk=boxes] > aside header button,[data-tuktuk=boxes] > section header button,[data-tuktuk=boxes] > aside footer button,[data-tuktuk=boxes] > section footer button{margin:0 1px}
 [data-tuktuk=boxes] > aside article,[data-tuktuk=boxes] > section article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
 [data-tuktuk=boxes] > aside{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;width:232px;z-index:1;}
 [data-tuktuk=boxes] > aside.absolute{position:absolute;height:inherit;-webkit-transition:all 300ms;-moz-transition:all 300ms;-ms-transition:all 300ms;-o-transition:all 300ms;transition:all 300ms;-webkit-transform:translateX(-290px);-moz-transform:translateX(-290px);-ms-transform:translateX(-290px);-o-transform:translateX(-290px);transform:translateX(-290px);}
@@ -15,8 +16,8 @@ body,html{height:100%;width:100%;margin:0;padding:0}
 [data-tuktuk=boxes] ul.totals > li > strong{display:block;font-weight:400;font-size:1.75em;line-height:.9em}
 [data-tuktuk=boxes] ul.totals > li > small{text-transform:uppercase;font-size:.85em}
 [data-tuktuk=boxes] nav[data-filter]{font-size:.8em;}
-[data-tuktuk=boxes] nav[data-filter] > a{margin-right:7px;padding:5.6px 9.333333333333334px;}
-[data-tuktuk=boxes] nav[data-filter] > a:last-child{margin-right:0}
+[data-tuktuk=boxes] nav[data-filter] > a:not(.button){margin-right:7px;padding:5.6px 9.333333333333334px;}
+[data-tuktuk=boxes] nav[data-filter] > a:not(.button):last-child{margin-right:0}
 [data-tuktuk=boxes] nav[data-menu] > a{display:block;padding:9.333333333333334px}
 [data-tuktuk=boxes] nav[data-link] > a{display:block;font-size:.8em;line-height:2em;}
 [data-tuktuk=boxes] nav[data-link] > a > .icon{position:relative;top:3px;margin-right:4.666666666666667px;font-size:1.5em;font-weight:normal}
