--- a/widgets/boxes/tuktuk.boxes.styl
+++ b/widgets/boxes/tuktuk.boxes.styl
@@ -31,7 +31,6 @@ body, html
       & > *
         height: h = (header_height - dimension)
         line-height: h
-
       & .button, button
         margin: 0 1px
 
@@ -47,10 +46,16 @@ body, html
       position: absolute
       height: inherit
       transition all 300ms
-      transform translateX(-(aside_width * 1.25))
 
-      &.active
-        transform translateX(0px)
+      &:not(.right)
+        transform translateX(-(aside_width * 1.25))
+        &.active
+          transform translateX(0px)
+      &.right
+        transform translateX((aside_width * 1.25))
+        &.active
+          transform translateX(-(aside_width))
+
 
     & > div
       width: 100%
@@ -135,7 +140,7 @@ body, html
     margin-bottom: dimension
 
   & > aside, & > section
-    & header
+    & header, footer
       & .session
         & > *
           float: left
