Fix margins in <table> with flexbox

--- a/widgets/boxes/tuktuk.boxes.styl
+++ b/widgets/boxes/tuktuk.boxes.styl
@@ -17,6 +17,10 @@ body, html
   box-pack(justify)
   overflow: hidden
 
+  /* ===================== INHERITANCE ==================== */
+  &  [class^="column_"], [class*=" column_"]
+    margin-left: 0px !important
+
   /* ====================== SCAFFOLD ====================== */
   & > aside, & > section
     display-box()
