--- a/package/widgets/boxes/tuktuk.boxes.css
+++ b/package/widgets/boxes/tuktuk.boxes.css
@@ -1,13 +1,17 @@
 body,html{height:100%;width:100%;margin:0;padding:0}
 [data-tuktuk=boxes]{display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;overflow:hidden;}
+[data-tuktuk=boxes] [class^="column_"],[data-tuktuk=boxes] [class*=" column_"]{margin-left:0 !important}
 [data-tuktuk=boxes] > aside,[data-tuktuk=boxes] > section{display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;}
 [data-tuktuk=boxes] > aside header,[data-tuktuk=boxes] > section header,[data-tuktuk=boxes] > aside footer,[data-tuktuk=boxes] > section footer{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;display:block;height:44px;line-height:44px;padding:7px;}
 [data-tuktuk=boxes] > aside header > *,[data-tuktuk=boxes] > section header > *,[data-tuktuk=boxes] > aside footer > *,[data-tuktuk=boxes] > section footer > *{height:30px;line-height:30px}
 [data-tuktuk=boxes] > aside header .button,[data-tuktuk=boxes] > section header .button,[data-tuktuk=boxes] > aside footer .button,[data-tuktuk=boxes] > section footer .button,[data-tuktuk=boxes] > aside header button,[data-tuktuk=boxes] > section header button,[data-tuktuk=boxes] > aside footer button,[data-tuktuk=boxes] > section footer button{margin:0 1px}
 [data-tuktuk=boxes] > aside article,[data-tuktuk=boxes] > section article{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1}
 [data-tuktuk=boxes] > aside{-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;width:232px;z-index:1;}
-[data-tuktuk=boxes] > aside.absolute{position:absolute;height:inherit;-webkit-transition:all 300ms;-moz-transition:all 300ms;-ms-transition:all 300ms;-o-transition:all 300ms;transition:all 300ms;-webkit-transform:translateX(-290px);-moz-transform:translateX(-290px);-ms-transform:translateX(-290px);-o-transform:translateX(-290px);transform:translateX(-290px);}
-[data-tuktuk=boxes] > aside.absolute.active{-webkit-transform:translateX(0);-moz-transform:translateX(0);-ms-transform:translateX(0);-o-transform:translateX(0);transform:translateX(0)}
+[data-tuktuk=boxes] > aside.absolute{position:absolute;height:inherit;-webkit-transition:all 300ms;-moz-transition:all 300ms;-ms-transition:all 300ms;-o-transition:all 300ms;transition:all 300ms;}
+[data-tuktuk=boxes] > aside.absolute:not(.right){-webkit-transform:translateX(-290px);-moz-transform:translateX(-290px);-ms-transform:translateX(-290px);-o-transform:translateX(-290px);transform:translateX(-290px);}
+[data-tuktuk=boxes] > aside.absolute:not(.right).active{-webkit-transform:translateX(0);-moz-transform:translateX(0);-ms-transform:translateX(0);-o-transform:translateX(0);transform:translateX(0)}
+[data-tuktuk=boxes] > aside.absolute.right{-webkit-transform:translateX(290px);-moz-transform:translateX(290px);-ms-transform:translateX(290px);-o-transform:translateX(290px);transform:translateX(290px);}
+[data-tuktuk=boxes] > aside.absolute.right.active{-webkit-transform:translateX(-232px);-moz-transform:translateX(-232px);-ms-transform:translateX(-232px);-o-transform:translateX(-232px);transform:translateX(-232px)}
 [data-tuktuk=boxes] > aside > div{width:100%;height:100%;display:-webkit-box;display:-moz-box;display:-ms-box;display:-o-box;display:box;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical}
 [data-tuktuk=boxes] > section{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;z-index:0}
 [data-tuktuk=boxes] ul{list-style:none;}
@@ -29,8 +33,8 @@ body,html{height:100%;width:100%;margin:0;padding:0}
 [data-tuktuk=boxes] .margin_right{margin-right:14px}
 [data-tuktuk=boxes] .margin_top{margin-top:14px}
 [data-tuktuk=boxes] .margin_bottom{margin-bottom:14px}
-[data-tuktuk=boxes] > aside header .session > *,[data-tuktuk=boxes] > section header .session > *{float:left}
-[data-tuktuk=boxes] > aside header .session > .avatar,[data-tuktuk=boxes] > section header .session > .avatar{height:30px;margin-right:7px}
-[data-tuktuk=boxes] > aside header .session > button,[data-tuktuk=boxes] > section header .session > button,[data-tuktuk=boxes] > aside header .session > .button,[data-tuktuk=boxes] > section header .session > .button{margin-top:2.8px;float:right}
+[data-tuktuk=boxes] > aside header .session > *,[data-tuktuk=boxes] > section header .session > *,[data-tuktuk=boxes] > aside footer .session > *,[data-tuktuk=boxes] > section footer .session > *{float:left}
+[data-tuktuk=boxes] > aside header .session > .avatar,[data-tuktuk=boxes] > section header .session > .avatar,[data-tuktuk=boxes] > aside footer .session > .avatar,[data-tuktuk=boxes] > section footer .session > .avatar{height:30px;margin-right:7px}
+[data-tuktuk=boxes] > aside header .session > button,[data-tuktuk=boxes] > section header .session > button,[data-tuktuk=boxes] > aside footer .session > button,[data-tuktuk=boxes] > section footer .session > button,[data-tuktuk=boxes] > aside header .session > .button,[data-tuktuk=boxes] > section header .session > .button,[data-tuktuk=boxes] > aside footer .session > .button,[data-tuktuk=boxes] > section footer .session > .button{margin-top:2.8px;float:right}
 [data-tuktuk=boxes] > aside article .avatar{height:204px;width:204px}
 [data-tuktuk=boxes] > aside hr{border:0;height:1px;margin:0}
