--- a/package/widgets/boxes/tuktuk.boxes.theme.css
+++ b/package/widgets/boxes/tuktuk.boxes.theme.css
@@ -6,13 +6,13 @@
 [data-tuktuk=boxes] > aside.dark{color:#ebebeb}
 [data-tuktuk=boxes] > aside.dark a:not(.button){color:#fff}
 [data-tuktuk=boxes] > aside.dark hr{background:#444}
-[data-tuktuk=boxes] > aside a:not(.button):hover,[data-tuktuk=boxes] > aside a:not(.button):active,[data-tuktuk=boxes] > aside a:not(.button).active{color:#f00}
+[data-tuktuk=boxes] > aside a:not(.button):hover,[data-tuktuk=boxes] > aside a:not(.button):active,[data-tuktuk=boxes] > aside a:not(.button).active{color:#f66}
 [data-tuktuk=boxes] > section{background:#f7f7f7;-webkit-box-shadow:inset 4px 0 0 rgba(0,0,0,0.025);-moz-box-shadow:inset 4px 0 0 rgba(0,0,0,0.025);-ms-box-shadow:inset 4px 0 0 rgba(0,0,0,0.025);-o-box-shadow:inset 4px 0 0 rgba(0,0,0,0.025);box-shadow:inset 4px 0 0 rgba(0,0,0,0.025)}
 [data-tuktuk=boxes] nav[data-filter] > a:not(.button){-webkit-border-radius:2px;-moz-border-radius:2px;-ms-border-radius:2px;-o-border-radius:2px;border-radius:2px;color:#707070;}
 [data-tuktuk=boxes] nav[data-filter] > a:not(.button):hover,[data-tuktuk=boxes] nav[data-filter] > a:not(.button):active,[data-tuktuk=boxes] nav[data-filter] > a:not(.button).active{color:#111;background:#ebebeb;-webkit-box-shadow:0 -1px 0 #c6c6c6,0 1px 0 #fdfdfd;-moz-box-shadow:0 -1px 0 #c6c6c6,0 1px 0 #fdfdfd;-ms-box-shadow:0 -1px 0 #c6c6c6,0 1px 0 #fdfdfd;-o-box-shadow:0 -1px 0 #c6c6c6,0 1px 0 #fdfdfd;box-shadow:0 -1px 0 #c6c6c6,0 1px 0 #fdfdfd}
 [data-tuktuk=boxes] nav[data-link] > a > .icon{color:#d9d9d9}
 [data-tuktuk=boxes] nav > a > small{opacity:.5}
-aside.light header{background-color:#f00;-webkit-box-shadow:inset 0 1px 0 #ff4040,inset 0 -1px 0 #c00;-moz-box-shadow:inset 0 1px 0 #ff4040,inset 0 -1px 0 #c00;-ms-box-shadow:inset 0 1px 0 #ff4040,inset 0 -1px 0 #c00;-o-box-shadow:inset 0 1px 0 #ff4040,inset 0 -1px 0 #c00;box-shadow:inset 0 1px 0 #ff4040,inset 0 -1px 0 #c00;color:#fff}
+aside.light header{background-color:#f66;-webkit-box-shadow:inset 0 1px 0 #ff8c8c,inset 0 -1px 0 #ff1f1f;-moz-box-shadow:inset 0 1px 0 #ff8c8c,inset 0 -1px 0 #ff1f1f;-ms-box-shadow:inset 0 1px 0 #ff8c8c,inset 0 -1px 0 #ff1f1f;-o-box-shadow:inset 0 1px 0 #ff8c8c,inset 0 -1px 0 #ff1f1f;box-shadow:inset 0 1px 0 #ff8c8c,inset 0 -1px 0 #ff1f1f;color:#fff}
 aside.dark header{background:#181818;-webkit-box-shadow:inset 0 -1px 0 #565656;-moz-box-shadow:inset 0 -1px 0 #565656;-ms-box-shadow:inset 0 -1px 0 #565656;-o-box-shadow:inset 0 -1px 0 #565656;box-shadow:inset 0 -1px 0 #565656}
 section > header{border-bottom:dotted 1px #d9d9d9}
 aside footer,section > footer{background:rgba(0,0,0,0.1)}
