--- a/widgets/boxes/tuktuk.boxes.styl
+++ b/widgets/boxes/tuktuk.boxes.styl
@@ -18,8 +18,8 @@ body, html
   overflow: hidden
 
   /* ===================== INHERITANCE ==================== */
-  &  [class^="column_"], [class*=" column_"]
-    margin-left: 0px !important
+  // &  [class^="column_"], [class*=" column_"]
+  //   margin-left: 0px !important
 
   /* ====================== SCAFFOLD ====================== */
   & > aside, & > section
