--- a/package/theme.default.styl
+++ b/package/theme.default.styl
@@ -134,3 +134,9 @@ body
     color: #fff !important
     border: solid 1px rgba(0,0,0,0.1)
     border-radius 2px
+
+
+[data-tuktuk="modal"]
+  & header
+    background: color !important
+    color: #fff
