Added GitModule soyjavi/CSSmethods

--- a/widgets/boxes/tuktuk.boxes.theme.styl
+++ b/widgets/boxes/tuktuk.boxes.theme.styl
@@ -1,4 +1,4 @@
-@import "../../stylesheets/__vendor.styl"
+@import "../../stylesheets/__constants.styl"
 @import "../../stylesheets/__theme.styl"
 
 aside_light_header = color
