--- a/stylesheets/theme.site.styl
+++ b/stylesheets/theme.site.styl
@@ -1,4 +1,4 @@
-@import "__vendor.styl"
+@import "CSSmethods/vendor.styl"
 @import "__theme.styl"
 /* ====================== FONT-FACE ====================== */
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:200,300,400,700")
