--- a/stylesheets/tuktuk.grid.styl
+++ b/stylesheets/tuktuk.grid.styl
@@ -13,7 +13,7 @@
 /* ========================= COLUMN ========================= */
 [class^="column_"], [class*=" column_"]
   margin: 0 16px 0 16px
-  overflow: hidden
+  // overflow: hidden
   float: left
   display: inline
 
@@ -254,7 +254,7 @@
   .row
     margin: 0 auto
     width: 456px
-    overflow: hidden
+    // overflow: hidden
 
   .row .row
     margin: 0
