--- a/stylesheets/tuktuk.widget.styl
+++ b/stylesheets/tuktuk.widget.styl
@@ -13,10 +13,16 @@
 
 .clear
   clear: both
-.left
+.on_left
   float: left
-.right
+.on_right
   float: right
+.block
+  display: block
+.inline
+  display: inline-block
+.none
+  display: none
 
 dimension = 20px
 .margin_none
@@ -45,12 +51,6 @@ dimension = 20px
 .padding_bottom
   padding-bottom: dimension
 
-.block
-  display: block
-.inline
-  display: inline-block
-.none
-  display: none
 
 
 /* ================== IMAGE & MEDIA ================== */
