--- a/sources/themes/theme.default.styl
+++ b/sources/themes/theme.default.styl
@@ -215,8 +215,8 @@ body
       color: lighten(text, 40%)
       &:hover, &:active, &.active
         color: text
-        background: darken(section, 5%)
-        box-shadow 0 -1px 0 darken(section, 20%), 0 1px 0 lighten(section, 80%)
+        background: darken(bck_light, 5%)
+        box-shadow 0 -1px 0 darken(bck_light, 20%), 0 1px 0 lighten(bck_light, 80%)
 
     &[data-link] > a > .icon
       color: aside_light_anchor
