--- a/sources/stylesheets/tuktuk.grid.styl
+++ b/sources/stylesheets/tuktuk.grid.styl
@@ -1,13 +1,11 @@
 @import "__constants.styl"
 
-// section
-//   overflow: hidden
-
 /* ========================= ROW ========================= */
 .row
   margin: 0px auto
   width: 960px
   overflow: hidden
+  display: block
 
   & .row
     margin: 0 -16px 0 -16px
@@ -17,7 +15,6 @@
 /* ========================= COLUMN ========================= */
 [class^="column_"], [class*=" column_"]
   margin: 0 16px 0 16px
-  // overflow: hidden
   float: left
   display: inline
 
