--- a/sources/stylesheets/tuktuk.nav.styl
+++ b/sources/stylesheets/tuktuk.nav.styl
@@ -4,8 +4,9 @@ nav
   &.group
     & a
       font-size: 15px
-      padding: 12px 16px
-      margin: 0px
+      line-height: 2.0em
+      padding: 0 12px
+      margin: 10px 0px
       display: inline-block
 
   &:not(.group)
