--- a/sources/themes/theme.default.styl
+++ b/sources/themes/theme.default.styl
@@ -1,40 +1,39 @@
 @import "../components/CSSmethods/vendor.styl"
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:200,300,400,700")
+@import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700")
 
-text            = #111
-color           = #FF6666
-color_secondary = #BFBFBF
+COLOR           = #34495e
+THEME           = #1ABC9C
+SECONDARY       = #ECF0F1
+SUCCESS         = #2ECC71
+ALERT           = #E74C3C
+
 
 bck_lightest    = #fff
-bck_light       = #f7f7f7
-bck_dark        = #383838
-bck_darkest     = #181818
+bck_light       = #ECF0F1
+bck_dark        = COLOR
+bck_darkest     = #2C3E50
 
-BORDER-RADIUS   = 1px
+TRANSITION      = 400ms
+BORDER-RADIUS   = 4px
 
-
-COLOR = color
 aside_light_anchor = darken(bck_lightest, 15%)
 aside_dark_header  = bck_darkest
 aside_dark_anchor  = lighten(bck_dark, 15%)
 
+
+
 body
-  color: text
+  color: COLOR
   font-size: 14px
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-family: "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 400
 
   & > header
-    &.solid
-      background: #111
     & nav a
       color: rgba(255,255,255,0.5)
       &:hover, &:active
         color: #fff
-
-  & > section
-    &.underline
-      border-bottom: solid #bbb 1px
 
 
   & hr
@@ -43,19 +42,19 @@ body
     margin: 20px 0
     padding: 0
 
+  & .radius
+    border-radius: BORDER-RADIUS
+
   /* ====================== NAVIGATION ====================== */
   & nav
     &.group a
-      border-left: solid #ccc 1px
-      &, & > .icon
-        color: #888
+      border-radius BORDER-RADIUS
+      color: #fff
+      & > .icon
+          opacity: 0.6
       &:hover, &:active, &.active
-        color: #000
-        background: white
-        & > .icon
-          color: #000
-      &:last-child
-        border-right: solid #ccc 1px
+        background: THEME
+
 
   /* ====================== BACKGROUNDS ====================== */
   & .bck
@@ -68,101 +67,93 @@ body
     &.darkest
       background-color: bck_darkest
     &.theme
-      background-color: color
+      background-color: THEME
 
-  /* ====================== TEXT ====================== */
+  /* ================================= TEXT ================================ */
   & .text
     &.shadow
       text-shadow 0 1px 1px rgba(0,0,0,0.5)
-    &.color
-      &.white
-        color: #fff
-      &.theme
-        color: color
-      &.secondary
-        color: color_secondary
-
+  & .color
+    &.white
+      color: #fff
+    &.theme
+      color: THEME
 
   /* ====================== FORM ====================== */
   & form, .form
     & input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], select, textarea
-      background-color: white
-      color: rgba(0, 0, 0, 0.75)
-      border: 1px solid #ddd
-      box-shadow inset 0 1px 2px rgba(0, 0, 0, 0.1)
+      background-color: #fff
+      color: COLOR
+      border: 2px solid #dce4ec
+      border-radius BORDER-RADIUS
       &.error, &:required
-        border-color: color_cancel
-        color: color_cancel
-        background-color: rgba(198, 15, 19, 0.1)
+        border-color: ALERT !important
+        color: ALERT
       &:focus
-        background: #FAFAFA;
-        border-color: #B3B3B3;
-        color: rgba(0, 0, 0, 0.75)
+        border-color: THEME
 
 
   & [data-control="checkbox"]
     FORM_color = #ccc
-    THEME = blue
+    RADIUS = BORDER-RADIUS * 5
 
-    background: color_secondary
-    color: darken(color_secondary, 25%)
+    background: THEME_secondary
+    color: darken(SECONDARY, 25%)
     font-weight: 700
-    border-radius: (BORDER-RADIUS * 2)
+    border-radius: RADIUS
     & label
-      border-radius: (BORDER-RADIUS * 2)
+      border-radius: RADIUS
       background: darken(FORM_color, 25%)
     &.checked
-      background-color: color
+      background-color: THEME
       color: #fff !important
       & label
-        background-color: darken(color, 25%)
+        background-color: darken(THEME, 25%)
 
   /* ====================== TABLE ====================== */
   & table
     background: #fff
-    color: #333
-    border: 1px solid #ddd;
-    border-radius 3px
+    color: COLOR
+    border: 1px solid lighten(COLOR, 75%)
+    border-radius BORDER-RADIUS
     & tr
       &:nth-child(even) td
-        background-color: #F9F9F9
+        background-color: lighten(COLOR, 95%)
     & th
-      background-color: #eee
-      color: #222
+      background-color: lighten(COLOR, 75%)
+      color: #FFF
     & td
       &.highlight
-        background-color: color !important
+        background-color: THEME !important
         color: #fff
 
   /* ====================== BUTTONS ====================== */
   & .button, button
-    background-color: color
     color: white
     font-weight: 600
 
     &:not(.transparent)
-      border-radius 1px
-      box-shadow inset 0 1px 0 rgba(255,255,255,0.2)
-      border: solid 1px rgba(0,0,0,0.1)
+      background-color: THEME
+      border-radius BORDER-RADIUS
+      transition box-shadow TRANSITION
+      &:hover
+        box-shadow inset 0 0 128px rgba(255,255,255,0.6)
       &:active
-        box-shadow inset 0 0 128px rgba(0,0,0,0.25)
-        border-color: none
+        box-shadow inset 0 0 128px rgba(0,0,0,0.2)
       &.secondary
-        background-color: color_secondary
-        color: #666
-        text-shadow: 0 1px 0 rgba(255,255,255,0.25)
-    &.transparent
-      background: none !important
+        background-color: darken(SECONDARY, 25%)
+        color: SECONDARY
+       &.success
+        background-color: SUCCESS
+       &.alert
+        background-color: ALERT
     &.large
       font-weight: 500
 
 
   /* ====================== BUTTONS ====================== */
   & a
-    color: color
-    opacity: 0.9
-    &:hover, &:active
-      opacity: 1.0
+    color: THEME
 
   /* ====================== TAGs ====================== */
   & :not(.icon).tag
@@ -172,7 +163,7 @@ body
 
 [data-tuktuk="modal"]
   & header
-    background: color !important
+    background: THEME !important
     color: #fff
 
   /* ====================== ASIDE ====================== */
@@ -181,17 +172,14 @@ body
 [data-tuktuk=boxes]
   /* ====================== ASIDE ====================== */
   & > aside
-    &.light
-      background: bck_lightest
-      &
-        color: lighten(text, 15%)
+    &:not(.dark)
+      color: lighten(COLOR, 15%)
       & a:not(.button)
-        color: lighten(text, 25%)
+        color: lighten(COLOR, 25%)
       & hr
         background: aside_light_anchor
 
     &.dark
-      background: bck_dark
       &
         color: lighten(bck_dark, 90%)
       & a:not(.button)
@@ -201,18 +189,23 @@ body
 
     & a:not(.button)
       &:hover, &:active, &.active
-          color: color
+          color: THEME
+
+    &  header
+      color: #fff
+      box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1)
 
   /* ====================== SECTION ====================== */
   & > section
-    background: bck_light
-    box-shadow: inset 4px 0 0 rgba(0,0,0,0.025)
+    box-shadow: inset 1px 0 0 rgba(0,0,0,0.025)
+    & header
+      border-bottom: dotted 1px aside_light_anchor
 
   /* ====================== NAVIGATION ====================== */
   & nav
     &[data-filter] > a:not(.button)
       border-radius 2px
-      color: lighten(text, 40%)
+      color: lighten(COLOR, 40%)
       &:hover, &:active, &.active
         color: text
         background: darken(bck_light, 5%)
@@ -224,26 +217,9 @@ body
     & > a > small
       opacity: 0.5
 
-  /* ====================== HEADER/FOOTER ====================== */
-  & header
-    aside.light &
-      background-color: COLOR
-      box-shadow inset 0 1px 0 lighten(COLOR, 25%), inset 0 -1px 0 darken(COLOR, 20%)
-      color: #fff
-    aside.dark &
-      background: color = aside_dark_header
-      box-shadow: inset 0 -1px 0 aside_dark_anchor
-    section > &
-        border-bottom: dotted 1px aside_light_anchor
 
-  & footer
-    aside &, section > &
+  & aside footer, section > footer
       background: rgba(0,0,0,0.1)
-
-  /* ====================== ARTICLE ====================== */
-  & article
-    aside.light &
-      box-shadow inset -1px 0 0 aside_light_anchor
 
   /* ====================== MENU ====================== */
   & [data-menu] > a:not(.button)
